--- a/apps/website/mfe/src/app/pages/about-us/sections/hero-section/hero-section.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/hero-section/hero-section.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="col-lg-1"></div>
         <div class="col-12 col-lg-6">
-            <img src="/assets/images/bg/about-us.png" class="img-fluid"
+            <img loading="lazy" src="/assets/images/bg/about-us.png" class="img-fluid"
                 [alt]="'ABOUT_US_PAGE.HERO_SECTION.TITLE' | translate" width="813" height="813">
         </div>
     </div>
