--- a/apps/website/mfe/src/app/pages/about-us/sections/our-mision/our-mision.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/our-mision/our-mision.component.html
@@ -3,7 +3,7 @@
         <div class="about-our-mision-title-hollow ">Our Mision</div>
         <div class="position-absolute title-content d-flex flex-column align-items-center" style="column-gap: 24px;">
             <div class=" about-our-mision-title">Our Mision</div>
-            <img src="assets/images/mision.png" alt="" class="img-fluid" width="721">
+            <img loading="lazy" src="assets/images/mision.png" alt="" class="img-fluid" width="721">
         </div>
     </div>
     <div class="row" style="margin-bottom: 40px;">
@@ -39,7 +39,7 @@
         </div>
         <div class="col-lg-1"></div>
         <div class="d-none d-md-block col-lg-3 ">
-            <img src="/assets/images/our-mision.png" alt="" width="300">
+            <img loading="lazy" src="/assets/images/our-mision.png" alt="" width="300">
         </div>
     </div>
 </section>
