--- a/apps/website/mfe/src/app/pages/home-page/sections/hero/sections/hero-slider/hero-slider.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/hero/sections/hero-slider/hero-slider.component.html
@@ -26,7 +26,7 @@
                         'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.DESCRIPTION'
                         | translate
                         }} </div>
-                    <img [src]="'/assets/images/organizing/slides/slide-' + (imgName+1) + '.jpg'" [alt]=" 'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.TITLE'
+                    <img loading="lazy" [src]="'/assets/images/organizing/slides/slide-' + (imgName+1) + '.jpg'" [alt]=" 'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.TITLE'
                     | translate" class="card-img-bottom" />
                 </div>
             </div>
@@ -53,7 +53,7 @@
                         'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.DESCRIPTION'
                         | translate
                         }} </div>
-                    <img [src]="'/assets/images/organizing/slides/slide-' + (imgName+1) + '.jpg'" [alt]=" 'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.TITLE'
+                    <img loading="lazy" [src]="'/assets/images/organizing/slides/slide-' + (imgName+1) + '.jpg'" [alt]=" 'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.TITLE'
             | translate" class="card-img-bottom" />
                 </div>
             </div>
