--- a/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.html
@@ -18,7 +18,7 @@
           <ng-container *ngFor="let item of [1, 2, 3, 4, 5, 6]">
             <div class="list-item d-flex align-items-center mb-3">
               <div class="circle-check-purple-10 d-flex align-items-center" style="gap: 8px;">
-                <img alt="clutter free finds services" src="/assets/icons/check-purple.svg" width="10" />
+                <img loading="lazy" alt="clutter free finds services" src="/assets/icons/check-purple.svg" width="10" />
               </div>
               <span>
                 {{ 'HOME_PAGE.HOW_WE_DO_IT.LIST.ITEM' + item | translate }}
