--- a/apps/website/mfe/src/app/pages/home-page/sections/our-community/our-community.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/our-community/our-community.component.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="col-12 col-lg-7 align-self-center" style="margin-bottom: 12px;">
-        <img src="/assets/images/map-clutter-free-finds.svg" alt="" class="img-fluid" />
+        <img loading="lazy" src="/assets/images/map-clutter-free-finds.svg" alt="" class="img-fluid" />
       </div>
     </div>
     <div class="row">
