--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -63,7 +63,7 @@
   --red-rgb: 235, 15, 38;
 
   /*Fonts*/
-  --poppins: 'Poppins', 'Open Sans', 'Helvetica Neue', sans-serif;
+  --poppins: 'Poppins', 'Roboto', 'Montserrat';
   --background-gradient: linear-gradient(
     227.26deg,
     var(--purple-30) 0%,
