--- a/apps/website/mfe/src/app/pages/about-us/sections/our-vision/our-vision.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/our-vision/our-vision.component.html
@@ -3,7 +3,7 @@
         <div class="about-our-vision-title-hollow ">Our Vision</div>
         <div class="position-absolute title-content d-flex flex-column align-items-center" style="column-gap: 24px;">
             <div class=" about-our-vision-title">Our Vision</div>
-            <img src="assets/images/vision.png" alt="" class="img-fluid" width="721">
+            <img loading="lazy" src="assets/images/vision.png" alt="" class="img-fluid" width="721">
             <div class="about-our-vision-title-support-text text-center">“ Create organized and functional spaces that
                 simplify
                 life"
@@ -23,7 +23,7 @@
         </div>
         <div class="col-lg-1"></div>
         <div class="d-none d-md-block col-lg-4 ">
-            <img src="/assets/images/our-vision.png" alt="" width="250">
+            <img loading="lazy" src="/assets/images/our-vision.png" alt="" width="250">
         </div>
     </div>
 </section>
