--- a/apps/website/mfe/src/app/pages/about-us/sections/who-is-section/who-is-section.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/who-is-section/who-is-section.component.html
@@ -3,7 +3,7 @@
         <div class="row d-flex align-items-end p-0 m-0">
             <div class="col-12 col-md-12 col-lg-5 col-xl-5" style="margin-bottom: 24px;">
                 <div>
-                    <img src="/assets/images/shapes.svg" alt="" class="img-fluid" width="200"
+                    <img loading="lazy" src="/assets/images/shapes.svg" alt="" class="img-fluid" width="200"
                         style="margin-bottom: 24px;" />
                 </div>
                 <div class="d-flex align-items-start" style="column-gap: 20px;">
@@ -32,7 +32,7 @@
                     <div class="d-flex flex-row">
                         <div class="carousel-inner">
                             <div *ngFor="let item of carousel" [class.active]="item.active" class="carousel-item">
-                                <img *ngFor="let img of item.images; first as isFirst; last as isLast"
+                                <img loading="lazy" *ngFor="let img of item.images; first as isFirst; last as isLast"
                                     [class.isFirst]="isFirst" [class.isLast]="isLast" [src]="img.image"
                                     class="carousel-image" [alt]="img.label">
                             </div>
