--- a/apps/website/mfe/src/app/pages/home-page/sections/why-cff/why-cff.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/why-cff/why-cff.component.html
@@ -2,7 +2,7 @@
   <div class="container cff-v2-why-cff-section p-3 p-lg-5">
     <div class="row align-items-center">
       <div>
-        <img src="/assets/images/shapes.svg" alt="" class="img-fluid d-none d-lg-block" width="200" />
+        <img loading="lazy" src="/assets/images/shapes.svg" alt="" class="img-fluid d-none d-lg-block" width="200" />
       </div>
       <div class="col d-flex flex-column align-items-center align-items-lg-start" style="max-width: 673px">
         <div class="cff-v2-why-cff-section-title">
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="d-none d-lg-block col align-self-center">
-        <img src="/assets/images/why-clutter-free-finds.png" alt="" class="img-fluid" />
+        <img loading="lazy" src="/assets/images/why-clutter-free-finds.png" alt="" class="img-fluid" />
       </div>
     </div>
   </div>
