--- a/libs/shared/footer/src/lib/footer/footer.component.html
+++ b/libs/shared/footer/src/lib/footer/footer.component.html
@@ -3,22 +3,22 @@
         <div class="row">
             <div class="col-12 col-xl-5 col-lg-5 col-md-6">
                 <div class="d-flex flex-column mt-3 mb-3" style="max-width: 430px">
-                    <img src="assets/images/logo-white.svg" alt="clutter free finds logo" class="mb-4" width="200"
-                        height="50" />
+                    <img loading="lazy" src="assets/images/logo-white.svg" alt="clutter free finds logo" class="mb-4"
+                        width="200" height="50" />
                     <p class="lh-lg"><span class="footer-bold">Clutter Free Finds: </span>
                         <span class="footer-description">{{'FOOTER.DESCRIPTION' | translate}}</span>
                     </p>
                     <div class="row mt-2">
                         <div class="col-2">
-                            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.FACEBOOK"><img
+                            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.FACEBOOK"><img loading="lazy"
                                     src="assets/icons/social/facebook.svg" alt="" width="24" height="24" /></a>
                         </div>
                         <div class="col-2">
-                            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.INSTAGRAM"><img
+                            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.INSTAGRAM"><img loading="lazy"
                                     src="assets/icons/social/instagram.svg" alt="" width="24" height="24" /></a>
                         </div>
                         <div class="col-2">
-                            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.TIKTOK"><img
+                            <a target="_blank" [href]="CFF_SOCIAL_ACCOUNTS.TIKTOK"><img loading="lazy"
                                     src="assets/icons/social/tiktok.svg" alt="" width="24" height="24" /></a>
                         </div>
                     </div>
@@ -70,12 +70,12 @@
                         </div>
                         <div [class.d-flex]="email.invalid && (email.dirty || email.touched)"
                             class="col-12 gap-1 align-items-center feedback">
-                            <img src="/assets/icons/error.svg" alt="" width="16">
+                            <img loading="lazy" src="/assets/icons/error.svg" alt="" width="16">
                             <div> Please check your email</div>
                         </div>
                         <div [class.d-flex]="email.valid && (email.dirty || email.touched)"
                             class="col-12 gap-1 align-items-center feedback">
-                            <img src="/assets/icons/check-green.svg" alt="" width="16">
+                            <img loading="lazy" src="/assets/icons/check-green.svg" alt="" width="16">
                             <div> Looks good!</div>
                         </div>
                     </div>
@@ -89,7 +89,8 @@
                                 class="d-inline-flex contact-section align-items-center w-100 h-100  position-relative"
                                 #tooltipRef="matTooltip" [matTooltip]="(emailTooltip$ | async)| translate"
                                 matTooltipPosition="above" style="gap: 16px">
-                                <img [src]="'assets/icons/' + ctaLink.image + '.svg'" alt="" width="45" height="45" />
+                                <img loading="lazy" [src]="'assets/icons/' + ctaLink.image + '.svg'" alt="" width="45"
+                                    height="45" />
                                 <div class="d-flex flex-column" style="gap: 9px">
                                     <p class="cta-title text-break">{{ ctaLink.title | translate }}</p>
                                     <p class="cta-links text-break">{{ ctaLink.content | translate }} </p>
@@ -100,8 +101,8 @@
                             <div class="col-12 col-xl-6 col-lg-6 col-md-4 mb-3">
                                 <a *ngIf="!isFirst" class="d-inline-flex contact-section align-items-center h-100 w-100"
                                     [href]="ctaLink.link" target="_blank" rel="noopener" style="gap: 16px">
-                                    <img [src]="'assets/icons/' + ctaLink.image + '.svg'" alt="" width="45"
-                                        height="45" />
+                                    <img loading="lazy" [src]="'assets/icons/' + ctaLink.image + '.svg'" alt=""
+                                        width="45" height="45" />
                                     <div class="d-flex flex-column" style="gap: 9px">
                                         <p class="cta-title text-break">{{ ctaLink.title | translate }}</p>
                                         <p class="cta-links text-break">{{ ctaLink.content | translate }} </p>
