fix: intersection observer performance is D-58 M-35

--- a/apps/website/mfe/src/app/pages/home-page/sections/hero/sections/hero-slider/hero-slider.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/hero/sections/hero-slider/hero-slider.component.html
@@ -2,7 +2,8 @@
     The images are repeated code
     Try to refactor the code
 -->
-<a [href]="APP_URL + '/services'">
+<!-- <a [href]="APP_URL + '/services'"> -->
+<a>
     <div class="columns feature-container position-relative">
         <div class="column d-flex flex-column">
             <div class="card border-0 mb-3" *ngFor="
@@ -26,7 +27,7 @@
                         'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.DESCRIPTION'
                         | translate
                         }} </div>
-                    <img loading="lazy" [src]="'/assets/images/organizing/slides/slide-' + (imgName+1) + '.jpg'" [alt]=" 'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.TITLE'
+                    <img [src]="'/assets/images/organizing/slides/slide-' + (imgName+1) + '.jpg'" [alt]=" 'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.TITLE'
                     | translate" class="card-img-bottom" />
                 </div>
             </div>
@@ -53,7 +54,7 @@
                         'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.DESCRIPTION'
                         | translate
                         }} </div>
-                    <img loading="lazy" [src]="'/assets/images/organizing/slides/slide-' + (imgName+1) + '.jpg'" [alt]=" 'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.TITLE'
+                    <img [src]="'/assets/images/organizing/slides/slide-' + (imgName+1) + '.jpg'" [alt]=" 'HOME_PAGE.HERO_SECTION.SLIDES.SLIDE_' + (index + 1) + '.TITLE'
             | translate" class="card-img-bottom" />
                 </div>
             </div>
