--- a/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.html
+++ b/apps/website/mfe/src/app/pages/home-page/sections/how-we-do-it/how-we-do-it.component.html
@@ -32,12 +32,11 @@
             }}</a>
         </div>
       </div>
-      <div class="col-12 col-lg-5 align-self-center d-flex justify-content-center">
-        <!-- TODO: Intersection observer start video -->
-        <iframe width="560" height="315" class="iframe img-fluid"
-          src="https://www.youtube.com/embed/eZClhYwU7Qc?start=210;controls=0&mute=1&showinfo=0&rel=0&autoplay=1&loop=1"
-          title=" YouTube video player" frameborder="0"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+      <div #youtubeVideoRef class="col-12 col-lg-5 align-self-center d-flex justify-content-center">
+
+        <iframe *ngIf="isVideoVisible" loading="lazy" width="560" height="315" class="iframe img-fluid"
+          [src]="ytIframe | iframeUrl" title=" YouTube video player" frameborder="0"
+          allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
           allowfullscreen></iframe>
       </div>
     </div>
