--- a/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
+++ b/apps/website/mfe/src/app/pages/instant-quote/client/sections/quote-client-details/quote-client-details.component.html
@@ -9,7 +9,7 @@
             <div [class.d-flex]="email.invalid && (email.dirty || email.touched) && email.value"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-red-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/red-close.svg" alt="" width="10">
+                        src="/assets/icons/red-close.svg" alt="" width="10" height="10">
                 </div>
                 <div class="error" *ngIf="email.errors?.['required']"> Enter your email address</div>
                 <div class="error" *ngIf="email.errors?.['pattern']"> Enter a valid email address</div>
@@ -17,7 +17,7 @@
             <div [class.d-flex]="email.valid && (email.dirty || email.touched) && email.value"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-green-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/check-green.svg" width="10" />
+                        src="/assets/icons/check-green.svg" width="10" height="10" />
                 </div>
                 <div class="error"> Looks good!</div>
             </div>
@@ -30,7 +30,7 @@
             <div [class.d-flex]="fname.invalid && (fname.dirty || fname.touched) && fname.value"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-red-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/red-close.svg" alt="" width="10">
+                        src="/assets/icons/red-close.svg" alt="" width="10" height="10">
                 </div>
                 <div class="error" *ngIf="fname.errors?.['required']"> Enter your First Name</div>
                 <div class="error" *ngIf="fname.errors?.['minlength']"> First Name is too short</div>
@@ -38,7 +38,7 @@
             <div [class.d-flex]="fname.valid && (fname.dirty || fname.touched) && fname.value"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-green-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/check-green.svg" width="10" />
+                        src="/assets/icons/check-green.svg" width="10" height="10" />
                 </div>
                 <div class="error"> Looks good!</div>
             </div>
@@ -51,7 +51,7 @@
             <div [class.d-flex]="lname.invalid && (lname.dirty || lname.touched) && lname.value"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-red-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/red-close.svg" alt="" width="10">
+                        src="/assets/icons/red-close.svg" alt="" width="10" height="10">
                 </div>
                 <div class="error" *ngIf="lname.errors?.['required']"> Enter your Last Name</div>
                 <div class="error" *ngIf="lname.errors?.['minlength']"> Last Name is too short</div>
@@ -59,7 +59,7 @@
             <div [class.d-flex]="lname.valid && (lname.dirty || lname.touched) && lname.value"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-green-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/check-green.svg" width="10" />
+                        src="/assets/icons/check-green.svg" width="10" height="10" />
                 </div>
                 <div class="error"> Looks good!</div>
             </div>
@@ -73,7 +73,7 @@
             <div [class.d-flex]="phoneNo.invalid && (phoneNo.dirty || phoneNo.touched) && phoneNo.value"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-red-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/red-close.svg" alt="" width="10">
+                        src="/assets/icons/red-close.svg" alt="" width="10" height="10">
                 </div>
                 <div class="flex flex-wrap">
                     <div class="error" *ngIf="phoneNo.errors?.['required']"> Enter your Phone Number</div>
@@ -84,32 +84,37 @@
             <div [class.d-flex]="phoneNo.valid && (phoneNo.dirty || phoneNo.touched) && phoneNo.value"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-green-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/check-green.svg" width="10" />
+                        src="/assets/icons/check-green.svg" width="10" height="10" />
                 </div>
                 <div class="error"> Looks good!</div>
             </div>
         </div>
         <div class="col-12 col-md-4 mb-3">
             <label for="clientQuoteCounty">City / County *</label>
-            <select (mousedown)="fetchCountiesData()" id="clientQuoteCounty" class="form-select"
-                (change)="onCountySelect($event)" [ngModel]="(selected_county$ | async)?.countyCode"
-                #countySelect="ngModel" required>
-                <option selected disabled>County</option>
-                <option [selected]="(selected_county$ | async)?.countyCode === county.countyCode"
-                    [value]="county.countyCode" *ngFor="let county of ( counties$ | async | sort:'asc':'name')">
-                    {{county.name}}</option>
-            </select>
+            <div class="input-group">
+                <select (mousedown)="fetchCountiesData()" id="clientQuoteCounty" class="form-select"
+                    (change)="onCountySelect($event)" [ngModel]="(selected_county$ | async)?.countyCode"
+                    #countySelect="ngModel" required>
+                    <option selected disabled>County</option>
+                    <option [selected]="(selected_county$ | async)?.countyCode === county.countyCode"
+                        [value]="county.countyCode" *ngFor="let county of ( counties$ | async | sort:'asc':'name')">
+                        {{county.name}}</option>
+                </select>
+                <span class="input-group-text" id="basic-addon1" *ngIf="isLoadingCounties$ | async">
+                    <img src="/assets/icons/loading-twotone-loop.svg" alt="..." width="24" height="24">
+                </span>
+            </div>
             <div [class.d-flex]="!countySelect.value && (countySelect.dirty || countySelect.touched)"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-red-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/red-close.svg" alt="" width="10">
+                        src="/assets/icons/red-close.svg" alt="..." width="10" height="10">
                 </div>
                 <div class="error"> Please select your City / County</div>
             </div>
             <div [class.d-flex]="countySelect.value && (countySelect.dirty || countySelect.touched)"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-green-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/check-green.svg" width="10" />
+                        src="/assets/icons/check-green.svg" width="10" height="10" />
                 </div>
                 <div class="error"> Looks good!</div>
             </div>
@@ -129,14 +134,14 @@
             <div [class.d-flex]="!constituencySelect.value &&( (constituencySelect.dirty || constituencySelect.touched) || (countySelect.dirty || countySelect.touched))"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-red-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/red-close.svg" alt="" width="10">
+                        src="/assets/icons/red-close.svg" alt="" width="10" height="10">
                 </div>
                 <div class="error"> Please select your Constituency</div>
             </div>
             <div [class.d-flex]="constituencySelect.value && (constituencySelect.dirty || constituencySelect.touched)"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-green-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/check-green.svg" width="10" />
+                        src="/assets/icons/check-green.svg" width="10" height="10" />
                 </div>
                 <div class="error"> Looks good!</div>
             </div>
@@ -154,14 +159,14 @@
             <div [class.d-flex]="!wardSelect.value && ((wardSelect.dirty || wardSelect.touched) || (constituencySelect.dirty || constituencySelect.touched))"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-red-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/red-close.svg" alt="" width="10">
+                        src="/assets/icons/red-close.svg" alt="" width="10" height="10">
                 </div>
                 <div class="error"> Please select a Neighbourhood</div>
             </div>
             <div [class.d-flex]="wardSelect.value && (wardSelect.dirty || wardSelect.touched)"
                 class="col-12 gap-1 align-items-center feedback mt-1">
                 <div class="circle-check-green-30"> <img loading="lazy" alt="clutter free finds services"
-                        src="/assets/icons/check-green.svg" width="10" />
+                        src="/assets/icons/check-green.svg" width="10" height="10" />
                 </div>
                 <div class="error"> Looks good!</div>
             </div>
