--- a/apps/website/mfe/src/styles.scss
+++ b/apps/website/mfe/src/styles.scss
@@ -324,3 +324,7 @@ span.mdc-tab-indicator {
   border-color: transparent;
   background-color: var(--purple-10);
 }
+.input-group-text {
+  background-color: transparent;
+  border: none;
+}
